parser/tests/snapshots/parser__parse_global_constant_setting.snap
---
source: parser/tests/parser.rs
description: "set BASE_URL \"stuff\""
expression: ast
---
Program(
  items: [
    Set(
      identifier: Identifier(
        name: "BASE_URL",
        span: Span(
          start: Location(
            line: 0,
            col: 4,
          ),
          end: Location(
            line: 0,
            col: 12,
          ),
        ),
      ),
      value: String(StringLiteral(
        raw: "\"stuff\"",
        value: "stuff",
        span: Span(
          start: Location(
            line: 0,
            col: 13,
          ),
          end: Location(
            line: 0,
            col: 20,
          ),
        ),
      )),
    ),
  ],
)
