parser/tests/snapshots/parser__parse_post_url.snap
---
source: parser/tests/parser.rs
description: "post http://localhost"
expression: ast
---
Program(
  items: [
    Request(
      method: POST,
      endpoint: Url(Literal(
        value: "http://localhost",
        span: Span(
          start: Location(
            line: 0,
            col: 5,
          ),
          end: Location(
            line: 0,
            col: 21,
          ),
        ),
      )),
      block: None,
      span: Span(
        start: Location(
          line: 0,
          col: 0,
        ),
        end: Location(
          line: 0,
          col: 21,
        ),
      ),
    ),
  ],
)
